name:                unitncal
version:             0.3.0.0
synopsis:            unitn iCal scraper
description:
  This program downloads the calendar files used by unitn's "orari" webapp
  and converts them from the custom format to standard iCal, which is then
  easily imported in many calendar apps.
homepage:            http://unitncal.fgaz.me/
license:             BSD3
license-file:        LICENSE
author:              Francesco Gazzetta
maintainer:          francygazz@gmail.com
copyright:           Copyright (C) 2017 Francesco Gazzetta
category:            Data, Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
data-files:          static/css/*.css
                   , static/js/*.js
--                   , static/*.html
                   , static/screenshots/android/*.png
                   , static/screenshots/ios/*.jpg

source-repository head
  type:     git
  location: git://github.com/fgaz/unitncal.git

executable unitncal
  main-is:             Main.hs
  other-modules:
    Paths_unitncal
    Types
    Types.Servable
    Server
    Config
    Scraper
    Generator
    Generator.Js
    Generator.Html
    ICal
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.11
                     , containers >=0.5 && <0.6
                     , http-conduit >=2.2 && <2.3
                     , aeson >=1.1 && <1.3
                     , lucid >=2.9 && <2.10
                     , servant-lucid >=0.7 && <0.8
                     , tagsoup >=0.14 && <0.15
                     , text >=1.2 && <1.3
                     , bytestring >=0.10 && <0.11
                     , time >=1.6 && <1.9
                     , servant-server >=0.10 && <0.12
                     , warp >=3.2 && <3.3
                     , mtl >=2.2 && <2.3
                     , http-media >=0.6 && <0.8
                     , data-default-class >= 0.1 && <0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

